2007-09-17  Neil Williams  <linux@codehelp.co.uk>

	* backend/sqlite/qof-sqlite.c: 
	(kvp_value_to_qof_type_helper), (sql_to_kvp_helper),
	(string_to_kvp_value), (kvpvalue_to_sql), (build_kvp_table), 
	(qsql_load_kvp) : New functions to support KVP
	
	(string_param_to_sql), (create_param_list), (create_each_param), 
	(delete_event), (create_event), (qsql_modify), (record_foreach),
	(string_param_foreach), (update_param_foreach), (update_dirty),
	(create_dirty_list), (mark_entity), (qsql_create), (check_state),
	(qsql_class_foreach), (qsql_backend_createdb), (qsql_backend_opendb),
	(qsqlite_session_begin), (qsqlite_db_load), (qsqlite_write_db),
	(qsql_determine_file_type), (qsqlite_session_end),
	(qsqlite_destroy_backend), (qsql_provider_free),
	(qsql_backend_new), (qof_sqlite_provider_init): KVP support and indent
	/ whitespace fixes.
	* backend/sqlite/qof-sqlite.h: KVP support.
	* qof/deprecated.c: (qof_commit_edit_part2): whitespace tweaks.

2007-09-16  Neil Williams  <linux@codehelp.co.uk>

	* backend/sqlite/qof-sqlite.c: (delete_event), (create_event),
	(qsql_modify), (update_dirty), (create_dirty_list), (mark_entity),
	(qsql_class_foreach), (qsql_backend_createdb), (qsql_create) : 
	Debug message tweaks - most to be removed before release.
	(check_state) : Pass the GUID string to SQLite.

2007-09-15  Neil Williams  <linux@codehelp.co.uk>

	* backend/file/qsf-backend.c: (qsf_provider_init),
	* backend/gda/qof-gda.c: (qof_gda_provider_init):
	Expose translatable strings via bindtextdomain for qof.
	* backend/sqlite/qof-sqlite.c: 
	(add_to_sql) : Improve memory efficiency when preparing	the SQL strings.
	(qsql_kvpvalue_to_sql): Prepare for KVP support (incomplete).
	(qsql_param_to_sql): Support entity GUID and reference GUID - incomplete.
	(create_param_list), (create_each_param) : use the new add_to_sql function.
	(delete_event) : Ensure an entity of registered with QofClass before 
	trying to delete it. Collapse SQL generation into a single command.